# pfp21-assignment1

./: .gitignore  .gitmodules  BENCHMARKS.md  CMakeLists.txt  Makefile  NOTES.md  README.Simon  benchmark.sh  checksums.decoded.txt  checksums.encoded.txt  checksums.inputs.txt  checksums.sorted.txt  test.sh
bench/: bench-vbytedec.sh  bench-vbyteenc.sh  bench-vbyteencsorted.sh
src/: MemoryMappedFile.h  VByte.h  proximityintersection.cpp  utils.h  vbinfo.cpp  vbyte.h  vbytedec.cpp  vbytedump.cpp  vbyteenc-ifstream.cpp  vbyteenc-ostreambufiterator.cpp  vbyteenc.cpp  vbyteencsorted.cpp
src/io/: buffer.h  byte_buffer.h  error.h  file.h  file_writer.h  memory_mapped_file.h
testfiles/: proximityintersection1.txt
